Fix #117485: Crash rendering motion blur with changing curve count

This is not supported so there can be artifacts, but it should not
crash.